--- a/style.css
+++ b/style.css
@@ -26,3 +26,24 @@ button {
 button:hover {
     background-color: #2ea043;
 }
+
+body{
+    display:flex ;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+@media (max-width: 768px) {
+    body {
+        padding: 10px;
+        font-size: 16px;
+    }
+    h1 {
+        font-size: 24px;
+    }
+    p {
+        font-size: 14px;
+    }
+}
