--- a/style.css
+++ b/style.css
@@ -27,6 +27,37 @@ button:hover {
     background-color: #2ea043;
 }
 
+.navbar {
+    background-color: #222;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 30px;
+}
+
+.logo {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.nav-links {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+}
+
+.nav-links a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    transition: color 0.3s;
+}
+
+.nav-links a:hover {
+    color: #00ccff;
+}
+
 body{
     display:flex ;
     flex-direction: column;
@@ -45,5 +76,13 @@ body{
     }
     p {
         font-size: 14px;
+    }
+    .nav-links{
+        flex-direction: column;
+        gap: 10px;
+    }
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
     }
 }
