--- a/style.css
+++ b/style.css
@@ -113,3 +113,42 @@ button {
     font-size: 16px;
     cursor: pointer;
 }
+
+.form-note {
+    margin-top: 40px;
+    text-align: center;
+}
+
+input {
+    padding: 10px;
+    font-size: 16px;
+    margin-bottom: 10px;
+    width: 60%;
+    max-width: 400px;
+}
+
+h1 {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 3rem;
+    background:
+    url('Usign-Gradients-Featured-Image.jpg')center;
+    background-size: cover;
+    background-clip: text;
+    color: transparent;
+    animation: animate 10s linear infinite;
+}
+
+@keyframes animate {
+    to {
+        background-position: -200px
+
+    }
+}
+ h2 {
+    background:
+    url('Usign-Gradients-Featured-Image.jpg')center;
+    background-size: cover;
+    background-clip: text;
+    color: transparent;
+    animation: animate 10s linear infinite;
+ }
